# RNetica

./: .Rbuildignore  .gitignore  ChangeLog  DESCRIPTION  INSTALLATION  Internals.txt  LICENSE  ListForBrent.TXT  NAMESPACE  README.md  RNetica.Rproj  TODO  cleanup  configure  configure.ac  configure.win
R/: Cases.R  Continuous.R  Edges.R  Experience.R  Inference.R  LoadFuns.R  Networks.R  Node.R  Random.R  Session.R  Tester.R
RNetica/branches/RNetica-XP/: ChangeLog  DESCRIPTION  INSTALLATION  NAMESPACE  TODO  cleanup
RNetica/branches/RNetica-XP/R/: Cases.R  Continuous.R  Edges.R  Experience.R  LoadFuns.R  Networks.R  Node.R  Random.R  Session.R
RNetica/branches/RNetica-XP/man/: AbsorbNodes.Rd  AddLink.Rd  AdjoinNetwork.Rd  CPA.Rd  CPF.Rd  CalcNodeState.Rd  CaseStream-class.Rd  CliqueNode-class.Rd  CopyNodes.Rd  EliminationOrder.Rd  EnterNegativeFinding.Rd  Extract.NeticaNode.Rd  FileCaseStream-class.Rd  GetNamedNetworks.Rd  GetNthNetwork.Rd  HasNodeTable.Rd  JunctionTreeReport.Rd  LearnCPTs.Rd  MakeCliqueNode.Rd  MemoryCaseStream-class.Rd  MemoryStreamContents.Rd  MutualInfo.Rd  NeticaBN-class.Rd  NeticaBN.Rd  NeticaCaseStream.Rd  NeticaNode-class.Rd  NeticaNode.Rd  NeticaSession-class.Rd  NetworkFindNode.Rd  NetworkName.Rd  NetworkNodeSetColor.Rd  NetworkNodeSets.Rd  (+18 more)
RNetica/branches/RNeticaS3/: LICENSE
RNetica/releases/: CPTtools.html  CPTtools.pptx  CPTtools_0.1-4.tgz  CPTtools_0.3-1.tgz  CPTtools_0.3-2.tgz  CPTtools_0.4-2.tgz  CPTtools_0.4-3.tgz  CPTtools_0.5-1.tgz  CPTtools_0.5-3.tgz  CPTtools_0.6-1.tgz  PNetica_0.1-2.tgz  PNetica_0.1-3.tgz  PNetica_0.2-2.tgz  PNetica_0.3-4.tgz  PNetica_0.3-6.tgz  PNetica_0.6-1.tgz  PNetica_0.6-2.tgz  PNetica_0.7-1.tgz  Peanut.html  Peanut_0.1-2.tgz  Peanut_0.1-3.tgz  Peanut_0.2-2.tgz  Peanut_0.3-4.tgz  Peanut_0.4-1.tgz  Peanut_0.6-1.tgz  Peanut_0.6-2.tgz  Peanut_0.7-1.tgz  RGAutils.html  RNetica.html  RNetica.pptx  RNetica.txt  RNeticaRSS.xml  RNetica_0.2-7.tgz  RNetica_0.3-3.tgz  RNetica_0.3-4.tgz  RNetica_0.4-1.tgz  RNetica_0.4-2.tgz  RNetica_0.4-4.tgz  RNetica_0.4-5.tgz  RNetica_0.4-6.tgz  (+11 more)
RNetica/tags/RNetica-0.2_6/: ChangeLog
RNetica/tags/RNetica_0.2-6/: INSTALLATION  Internals.txt  LICENSE  configure.ac
RNetica/tags/RNetica_0.2-6/R/: LoadFuns.R  Networks.R
RNetica/tags/RNetica_0.2-6/inst/sampleNets/: DiBelloSamejimaFourLevel.dne  IRT5P.dne  System.dne
RNetica/tags/RNetica_0.2-6/man/: AddLink.Rd  CPA.Rd  IsNodeDeterministic.Rd  NetworkTitle.Rd  NodeLevels.Rd  NodeStateTitles.Rd  is.discrete.Rd  normalize.Rd
RNetica/tags/RNetica_0.2-6/src/: RNetica.h
RNetica/tags/RNetica_0.2-6/test/: EMSMtest.R
RNetica/tags/RNetica_0.2-7/: ChangeLog  DESCRIPTION  TODO  configure
RNetica/tags/release-0.1-8/: ChangeLog  NAMESPACE  TODO  configure.win
RNetica/trunk/: ChangeLog  DESCRIPTION  INSTALLATION  NAMESPACE  TODO  cleanup  configure.ac  configure.in
RNetica/trunk/R/: Cases.R  Continuous.R  Edges.R  Experience.R  LoadFuns.R  Networks.R  Node.R  Random.R  Session.R  Tester.R
RNetica/trunk/inst/sampleNets/: ACEDMotif1.dne  CommonRatioEasyEM.dne  CommonRatioMedEM.dne  EMSMMotif.dne  EMTask2b.dne  ExamplesEasyEM.dne  ExtendEasyEM.dne  Hard3EM.dne  ModelTableExtendHardEM.dne  TableExtendEasyEM.dne  TableExtendHardEM.dne
RNetica/trunk/man/: AbsorbNodes.Rd  AdjoinNetwork.Rd  CPA.Rd  CPF.Rdx  CalcNodeState.Rd  CaseFileDelimiter.Rd  CaseFileStream.Rd  CliqueNode-class.Rd  CompileNetwork.Rd  CopyNets.Rd  CopyNetworks.Rd  CopyNodes.Rd  CreateNetwork.Rd  DeleteNodeTable.Rd  EnterFindings.Rd  EnterGaussianFinding.Rd  EnterIntervalFinding.Rd  EnterNegativeFinding.Rd  Extract.NeticaNode.Rd  FadeCPT.Rd  FindingsProbability.Rd  GenerateRandomCase.Rd  GetNamedNets.Rd  GetNamedNetworks.Rd  GetNetworkAutoUpdate.Rd  GetNthNet.Rd  GetNthNetwork.Rd  HasNodeTable.Rd  IDname.Rd  IsNodeDeterministic.Rd  JointProbability.Rd  JunctionTreeReport.Rd  LearnCases.Rd  LearnFindings.Rd  MakeCliqueNode.Rd  MemoryCaseStream.Rd  MemoryStreamContents.Rd  MostProbableConfig.Rd  MutualInfo.Rd  NeticaBN.Rd  (+57 more)
RNetica/trunk/src/: Cases.c  Continuous.c  Edges.c  Experience.c  Inference.c  Makevars  Makevars.am  Makevars.in  Networks.c  Node.c  RNetica.h  Random.c  Registration.c  Session.c
RNetica/trunk/test/: EMSMtest.R  NetworkTest.R
inst/: CITATION
inst/INSTALLATION/: netica.pc  netica504.pc
inst/Netica/: Readme.txt
inst/pkgconfig/: Readme.md  netica.pc  netica504.pc
inst/sampleNets/: ACEDMotif2.dne  CommonRatioHardEM.dne  EMTask1b.dne  ExamplesHardEM.dne  ExamplesMedEM.dne  ExtendHardEM.dne  ExtendMedEM.dne  IRT5.dne  LangAss_3.dne  LangAss_4.dne  LanguagePM.dne  ListeningTask.dne  MiniACEDPM-Motif.dne  MiniACEDPM.dne  ModelTableExtendEasyEM.dne  ModelTableExtendMedEM.dne  ReadingTask.dne  SpeakingTask.dne  TableExtendMedEM.dne  WritingTask.dne
inst/testData/: testpos  testpos.c
man/: AbsorbNodes.Rd  AddLink.Rd  AdjoinNetwork.Rd  CPA.Rd  CalcNodeState.Rd  CaseFileDelimiter.Rd  CaseFileStream.Rd  CaseMemoryStream.Rd  CaseStream-class.Rd  CliqueNode-class.Rd  CompileNetwork.Rd  CopyNets.Rd  CopyNetworks.Rd  CopyNodes.Rd  CreateNetwork.Rd  DeleteNodeTable.Rd  EliminationOrder.Rd  EnterFindings.Rd  EnterGaussianFinding.Rd  EnterIntervalFinding.Rd  EnterNegativeFinding.Rd  Extract.NeticaNode.Rd  FadeCPT.Rd  FileCaseStream-class.Rd  FindingsProbability.Rd  GenerateRandomCase.Rd  GetNamedNetworks.Rd  GetNetworkAutoUpdate.Rd  GetNthNetwork.Rd  HasNodeTable.Rd  IDname.Rd  IsNodeDeterministic.Rd  JointProbability.Rd  JunctionTreeReport.Rd  LearnCPTs.Rd  LearnCases.Rd  LearnFindings.Rd  MakeCliqueNode.Rd  MemoryCaseStream-class.Rd  MemoryStreamContents.Rd  (+72 more)
src/: Cases.c  Continuous.c  Edges.c  Experience.c  Makevars.in  Makevars.win  Makevars.winin  Networks.c  Node.c  RNetica.h  Random.c  Registration.c  Session.c  config.h  config.h.in  config.h.win  install.libs.R  symbols.rds
src/Netica/: .gitignore  Makefile  Makefile.in  Makefile.win  Makeit.win  Readme.md  clean.win  configure  configure.ac
test/: AbsorbNodeTest.R  NetworkTest.R
vignettes/: ConstructingNetworks.Rmd  Inference.Rmd  LicenseKeys.Rmd  RNeticaInternals.Rmd  SimulationStudies.Rmd
(+116 files in other folders)
